WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96915
[EFL] Several key codes are not mapped with evas key name.
https://bugs.webkit.org/show_bug.cgi?id=96915
Summary
[EFL] Several key codes are not mapped with evas key name.
Ryuan Choi
Reported
2012-09-17 06:29:45 PDT
Several key codes are not mapped with evas key name such as KP_0 Patch will be added.
Attachments
Patch
(2.16 KB, patch)
2012-09-17 06:45 PDT
,
Ryuan Choi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryuan Choi
Comment 1
2012-09-17 06:45:53 PDT
Created
attachment 164386
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2012-09-17 06:57:45 PDT
Comment on
attachment 164386
[details]
Patch Can any test be unskipped?
Ryuan Choi
Comment 3
2012-09-17 08:44:53 PDT
(In reply to
comment #2
)
> (From update of
attachment 164386
[details]
) > Can any test be unskipped?
No, the results were same with/without this.
Gyuyoung Kim
Comment 4
2012-09-17 17:35:13 PDT
Comment on
attachment 164386
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=164386&action=review
> Source/WebCore/platform/efl/EflKeyboardUtilities.cpp:210 >
Add a comment for keymap added by this loop.
Ryuan Choi
Comment 5
2012-09-17 18:22:48 PDT
Committed
r128835
: <
http://trac.webkit.org/changeset/128835
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug