[EFL] Several key codes are not mapped with evas key name. https://bugs.webkit.org/show_bug.cgi?id=96915

Reviewed by Gyuyoung Kim.

* platform/efl/EflKeyboardUtilities.cpp:
(WebCore::createWindowsKeyMap):
Added missing items of hashmap for virtual key code.

Canonical link: https://commits.webkit.org/114901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128835 268f45cc-cd09-0410-ab3c-d52691b4dbfc